objects/A_L_Exception__c.object
<CustomObject>
	<description>To capture Arch&amp;Launch Svc Exception Status.</description>
	<fields>
		<fullName>A_L_Package__c</fullName>
		<label>A&amp;L Package</label>
		<picklist>
			<picklistValues>
				<fullName>AUDIENCE MANAGER</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>AEM</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>CAMPAIGN</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>MULTI-SOLUTION</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>ANALYTICS</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>TARGET</fullName>
			</picklistValues>
		</picklist>
		<required>true</required>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Opportunity_DR_Reg_Id__c</fullName>
		<description>DR Id of associated opportunity</description>
		<formula>Opportunity__r.Deal_Registration_Id__c</formula>
		<inlineHelpText>DR Id of associated opportunity</inlineHelpText>
		<label>Opportunity DR Reg Id</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Opportunity__c</fullName>
		<label>Opportunity</label>
		<referenceTo>Opportunity</referenceTo>
		<relationshipName>Arch_Launch_Svc_Exceptions</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>Status__c</fullName>
		<label>Status</label>
		<picklist>
			<picklistValues>
				<fullName>Exception Requested</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Exception Approved</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Exception Denied</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Adjustment Approved</fullName>
			</picklistValues>
		</picklist>
		<required>true</required>
		<type>Picklist</type>
	</fields>
	<label>A&amp;L Exception</label>
	<nameField>
		<displayFormat>AL-{0000000}</displayFormat>
		<label>A&amp;L Exception #</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>A&amp;L Exceptions</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>